fixed margins on feature cards so they do not go off-screen

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,6 +6,10 @@ body {
 li.nav-item a {
    color: #fafafa;
 }
+
+li.nav-link a {
+    color: #fafafa;
+}
 /*FOOTER*/
 footer {
         background-image: url('/static/img/1_akxEm0R7YDzmGjW54i8Kcw.png');
@@ -62,7 +66,7 @@ footer {
 
 .ftcard {
     margin-top: 50%;
-    margin-left: 60%;
+    margin-left: 20%;
 } 
 
 .card-body {
